// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - News News listing renders correctly 1`] = `
<jest>
  <header
    class="bcl-header"
  >
    <!-- navbar_settings -->
    <nav
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <p>
          Project name
        </p>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end d-flex btn btn-light btn-md"
              type="button"
            >
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
  <main>
    <div
      class="container mt-md-4-75 mt-4"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        />
        <div
          class="col-12 col-lg-9"
        />
      </div>
    </div>
  </main>
  <footer
    class="bcl-footer"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in sagittis dolor.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#facebook"
              />
            </svg>
            Facebook
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#twitter"
              />
            </svg>
            Twitter
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#linkedin"
              />
            </svg>
            Linkedin
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4 pb-4"
        >
          <img
            alt="logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact the EU
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Call us 00 800 6 7 8 9 10 11
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Use other telephone options
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Write us via our contact form
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Meet us at a local EU office
          </a>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Social media
          </p>
          <p>
            Search for 
            <a
              class="text-underline-hover mb-2"
              href="#"
            >
              EU social media channels
            </a>
          </p>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Legal
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Language policy
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Privacy policy
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Legal notice
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Cookies
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 pt-4 pt-lg-0 mb-2"
          >
            EU institutions
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Parliament
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Council
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Council of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Commission
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Court of Justice of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Central Bank
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Court of Auditors
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European External Action Service
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Economic and Social Committee
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Committee of the Region
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Investment Bank
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Ombudsman
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Data Protection Supervisor
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Data Protection Board
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Personnel Selection Office
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Publications Office of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Agencies
          </a>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`OE - News News page renders correctly 1`] = `
<jest>
  <header
    class="bcl-header"
  >
    <!-- navbar_settings -->
    <nav
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <p>
          Project name
        </p>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end d-flex btn btn-light btn-md"
              type="button"
            >
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="bcl-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="bcl-language__list"
                >
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="bcl-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
  <main>
    <div
      class="vw-100 py-md-4-75 py-4 bg-light"
    >
      <div
        class="container"
      >
        <div
          class="bg-transparent border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/200/200?random=6"
              />
            </div>
            <div
              class="col-md-9"
            >
              <div
                class="card-body pt-md-0 px-0 px-md-3 pb-0 pb-md-3"
              >
                <div
                  class="mb-3"
                >
                  <span
                    class="me-2 badge bg-primary"
                  >
                    Category 1
                  </span>
                  <span
                    class="badge bg-primary"
                  >
                    Category 2
                  </span>
                </div>
                <h2
                  class="card-title fw-bold"
                >
                  This is the title of this news
                </h2>
                <div
                  class="mb-4 mt-4"
                >
                  <span
                    class="text-muted me-3"
                  >
                    8 hours ago
                  </span>
                </div>
                <p>
                  
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse volutpat ultricies massa, a dapibus libero porta nec.
        Sed facilisis dictum vestibulum. Fusce commodo hendrerit diam, pretium tempus leo varius sit amet.
        Etiam interdum, orci at sagittis luctus, lorem libero tempus mauris, a fermentum libero orci semper lacus.
        Duis tristique fringilla magna, eu egestas dolor molestie non.
     
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container mt-md-4-75 mt-4"
    >
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper, a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet. Curabitur a efficitur ante. Phasellus non felis laoreet, posuere ante ut, rhoncus tortor. Proin sed erat vel nisl luctus vulputate. Nunc tristique ultricies turpis, eu dictum enim ultrices vel. Sed posuere at leo sit amet placerat. Sed dapibus viverra urna ac pretium. Praesent et laoreet erat, eget volutpat metus. Duis ac augue sed tortor elementum dignissim in sit amet velit. Nullam nec viverra mi.
          </p>
          <p>
            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras facilisis enim non nisi hendrerit laoreet. Vestibulum id facilisis augue, vitae faucibus justo. Etiam congue malesuada urna vitae suscipit. Mauris a varius leo. Nulla vel facilisis lacus. Suspendisse semper velit sit amet purus egestas, sit amet ullamcorper enim egestas. Vestibulum at lacus at purus ornare auctor nec consequat velit. Pellentesque iaculis sit amet nulla at rutrum.
          </p>
          <ul>
            <li>
              Vestibulum ante ipsum primis in faucibus
            </li>
            <li>
              Lorem ipsum dolor sit amet
            </li>
            <li>
              Duis ac augue sed tortor elementum dignissim
            </li>
          </ul>
          <h3
            class="fw-bold my-4"
          >
            Sub heading
          </h3>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet eleifend tortor. In facilisis eros vitae turpis ullamcorper, a euismod dolor lacinia. Nam facilisis ipsum et sollicitudin imperdiet. Curabitur a efficitur ante. Phasellus non felis laoreet, posuere ante ut, rhoncus tortor. Proin sed erat vel nisl luctus vulputate. Nunc tristique ultricies turpis, eu dictum enim ultrices vel. Sed posuere at leo sit amet placerat. Sed dapibus viverra urna ac pretium. Praesent et laoreet erat, eget volutpat metus. Duis ac augue sed tortor elementum dignissim in sit amet velit. Nullam nec viverra mi.
          </p>
          <p>
            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras facilisis enim non nisi hendrerit laoreet. Vestibulum id facilisis augue, vitae faucibus justo. Etiam congue malesuada urna vitae suscipit. Mauris a varius leo. Nulla vel facilisis lacus. Suspendisse semper velit sit amet purus egestas, sit amet ullamcorper enim egestas. Vestibulum at lacus at purus ornare auctor nec consequat velit. Pellentesque iaculis sit amet nulla at rutrum.
          </p>
        </div>
      </div>
    </div>
  </main>
  <div
    class="bg-lighter py-4 mt-md-4-5 mt-4 text-center"
  >
    Feedback module here
  </div>
  <div
    class="bg-gray-200 py-4 text-center"
  >
    Share module here
  </div>
  <footer
    class="bcl-footer"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in sagittis dolor.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#facebook"
              />
            </svg>
            Facebook
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#twitter"
              />
            </svg>
            Twitter
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            <svg
              class="me-2 me-2-5 bi icon--xs"
            >
              <use
                xlink:href="#linkedin"
              />
            </svg>
            Linkedin
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Link
          </a>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4 pb-4"
        >
          <img
            alt="logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact the EU
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Call us 00 800 6 7 8 9 10 11
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Use other telephone options
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Write us via our contact form
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Meet us at a local EU office
          </a>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Social media
          </p>
          <p>
            Search for 
            <a
              class="text-underline-hover mb-2"
              href="#"
            >
              EU social media channels
            </a>
          </p>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Legal
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Language policy
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Privacy policy
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Legal notice
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Cookies
          </a>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 pt-4 pt-lg-0 mb-2"
          >
            EU institutions
          </p>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Parliament
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Council
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Council of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Commission
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Court of Justice of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Central Bank
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Court of Auditors
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European External Action Service
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Economic and Social Committee
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Committee of the Region
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Investment Bank
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Ombudsman
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Data Protection Supervisor
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Data Protection Board
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            European Personnel Selection Office
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Publications Office of the European Union
          </a>
          <a
            class="d-block text-underline-hover mb-1"
            href="#"
          >
            Agencies
          </a>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
